--- a/conf/synkhole.conf
+++ b/conf/synkhole.conf
@@ -1,3 +1,3 @@
 # Set the following variables (no trailing slashes)
-BACKUP_DIR="/usr/local/tomcat /usr/local/cassandra /root /home /etc"
+BACKUP_DIR="/root /home /etc"
 STORAGE_DIR="/srv/backup"
