Discard old backups based on user-configured setting

--- a/conf/synkhole.conf
+++ b/conf/synkhole.conf
@@ -1,3 +1,4 @@
 # Set the following variables (no trailing slashes)
 BACKUP_DIR="/root /home /etc"
 STORAGE_DIR="/srv/backup"
+DISCARD_MAX_DAYS="30"
